# ai_transactions

./: POC_concrete_example.txt  README.md  autogentest.py  backendapi_tool.py  csvtool.py  customtools.py  llm_aws.py  llm_aws_cohere.py  llms.py  pyproject.toml  transact_autogen_datapath_withCacheMemo.py  transactai.py  transactai_autogen.py  transactai_autogen_datapath.py  transactai_crewai.py  transactai_crewai_datapath.py
ai_generated_code/: JsonParser.py  analyze_data.py  analyze_transactions.py  biggest_transaction_amount.py  biggest_transaction_info.py  calc_spending.py  calculate_grocery_spending.py  calculate_restaurant_spending.py  calculate_spendding.py  calculate_spending.py  calculate_total_spending.py  calculate_total_spending_december2023.py  calculation.py  data_processor.py  explore_data.py  filter_data.py  filter_transactions.py  find_biggest_total_transactionAmount.py  find_largest_total_transaction_amount.py  find_largest_transactions.py  find_spending.py  get_biggest_transaction.py  get_grocery_spending.py  get_largest_transaction.py  grocery_spending.py  json_parser.py  max_total_transaction.py  mortgage_payment.py  parse_json.py  parse_json_data.py  print_data_structure.py  read_file.py  restaurant_spending.py  spending_calculator.py  spendings.py  sum_transactions.py  task.py  task_solution.py  total_grocery_spending.py  total_spending.py  (+8 more)
data/: backItemCodeToTransactionTypeMap.json  bedrock_models.txt  creditcardtransacts.json  data.json  data.txt  data_generated.json  data_generated_small.json  data_generator.py  dataschema.py  loadtxt.py  (+1 more)
(+6 files in other folders)
