[tool.poetry]
name = "ddstransactai"
version = "0.1.0"
description = "DDSTRANSACTAI using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
ddstransactai = "ddstransactai.main:run"
train = "ddstransactai.main:train"
replay = "ddstransactai.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
